@@ -10,6 +10,7 @@ tests_require = [
     'zope.configuration',
     'plone.app.testing',
     'plone.mocktestcase',
+    'plone.app.contenttypes',
     ]
 
 setup(name='ftw.journal',
@@ -26,6 +27,7 @@ setup(name='ftw.journal',
       classifiers=[
         'Framework :: Plone',
         'Framework :: Plone :: 4.3',
+        'Framework :: Plone :: 5.1',
         'Programming Language :: Python',
         'Topic :: Software Development :: Libraries :: Python Modules',
         ],
